--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="bg-gray-50">
   <app-root></app-root>
 </body>
 </html>
